--- a/THANKS
+++ b/THANKS
@@ -2,18 +2,20 @@ Overall Thanks:
 	tourach23
 
 Individaul Thanks:
-	build (cvpcs)
+	dirs:
+		build (cvpcs)
 
-	external/busybox (cyanogen/cvpcs)
-	external/compcache (cyanogen)
-	external/cwiid (cvpcs)
-	external/fuse (cyanogen)
-	external/iptables (cyanogen)
-	external/libc-ext (cvpcs)
-	external/vixie-cron (cvpcs)
+		external/busybox (cyanogen/cvpcs)
+		external/compcache (cyanogen)
+		external/cwiid (cvpcs)
+		external/fuse (cyanogen)
+		external/libc-ext (cvpcs)
+		external/vixie-cron (cvpcs)
 
-	packages/app/Superuser (cyanogen)
+		packages/app/Superuser (cyanogen)
 
-	vendor/motorola/sholes (koush)
-	vendor/cyanogen (cyanogen)
-	vendor/cvpcs (cvpcs)
+		vendor/cvpcs (cvpcs)
+		vendor/cvpcs/prebuilt/cvpcs-sholes/xbin/scriptybox (cvpcs/Pete)
+	tweaks:
+		HQ video rec (Pete)
+
